Font fixes, adjust spacing

--- a/src/Components/TextBox/TextBox.scss
+++ b/src/Components/TextBox/TextBox.scss
@@ -27,6 +27,7 @@ div {
       width: 280px;
       height: 23px;
       background: none;
+      border-radius: none;
       border-width: 0 0 1px 0;
       border-color: #d1d1d1;
       font-family: "Roboto Condensed";
