--- a/src/Pages/AttendEvent/AttendEvent.scss
+++ b/src/Pages/AttendEvent/AttendEvent.scss
@@ -1,12 +1,9 @@
 .stadionFET {
   width: 320px;
-  height: 1570px;
   background: #ffffff;
   main {
-    .formtitle {
+    .form-title {
       margin-top: 50px;
-      width: 138px;
-      height: 20px;
       color: #1a2434;
       font-family: Roboto;
       font-size: 24px;
