--- a/src/Pages/AttendEvent/AttendEventForm/AttendEventForm.scss
+++ b/src/Pages/AttendEvent/AttendEventForm/AttendEventForm.scss
@@ -1,7 +1,5 @@
 form {
   width: 280px;
-  height: 985px;
-
   .price-summary {
     .price-summary-category {
       width: 130px;
