--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Roboto", "Roboto-Condensed", sans-serif;
+  font-family: "Roboto", "Roboto-Condensed", "helvetica", "sans-serif";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
